# consultancy-outreach

./: .env.example  .gitignore  BIDS.md  LAUNCH.md  README.md  body1.txt  body2.txt  hookcmd.tmp
backend/: activity.py  alerts.py  campaigns_loader.py  config.py  modal_app.py  operator_profile.py  prompts_loader.py  provider_cooldown.py  pyproject.toml  sample_leads.example.csv  sender_limits.py
backend/clients/: apify.py  apify_upwork.py  apollo.py  claude.py  freelancer.py  github.py  github_pr.py  heyreach.py  hn_hiring.py  linkedin_jobs.py  meta_ads.py  news.py  proxycurl.py  remoteok.py  resend.py  sam_gov.py  scrape.py  smartlead.py  smtp_email.py  tavily.py  twilio_sms.py  unipile.py  upwork.py  upwork_email.py  verifier.py  xsearch.py
backend/db/: schema.sql
backend/prompts/: analyze_error.md  assessment_interview.md  assessment_synthesize.md  audit_report.md  concierge.md  draft_bid.md  draft_blog_post.md  draft_build_post.md  draft_case_study.md  draft_connection.md  draft_dm.md  draft_email.md  draft_email_followup.md  draft_growth_comments.md  draft_inbound.md  draft_inmail.md  draft_linkedin_followup.md  draft_linkedin_post.md  draft_newsletter.md  draft_revival.md  draft_testimonial_ask.md  draft_tool_post.md  draft_tweet_reaction.md  icp.md  insight_extraction.md  linkedin_playbook.md  meeting_extract.md  meeting_prep.md  proof.md  reply_classify.md  reply_redraft.md  roast_outreach.md  score.md  score_opportunity.md  style.md  voice_corpus.md
backend/scripts/: apply_migration.py  draft_one.py  enrich_emails.py  import_mailboxes.py  ingest_run.py  (+10 more)
(+302 files in other folders)
